--- a/scss/style.scss
+++ b/scss/style.scss
@@ -807,3 +807,199 @@
         }
     }
 }
+
+// DECISION ========================
+
+.decision {
+    padding-bottom: 260px;
+    position: relative;
+
+    @media screen and (max-width: 1150px) {
+        padding-bottom: 100px;
+    }
+    @media screen and (max-width: 400px) {
+        padding-bottom: 60px;
+    }
+    &::after,
+    &::before {
+        content: '';
+        position: absolute;
+    }
+
+    &::before {
+        left: 0;
+        bottom: 0;
+        width: 209px;
+        height: 189px;
+        background: rgba(245, 206, 128, 0.28);
+        filter: blur(200px);
+    }
+    &::after {
+        background-image: url(../images/decision/decor.svg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        top: -670px;
+        right: 0;
+        width: 1920px;
+        height: 1300px;
+        z-index: -1;
+    }
+
+}
+.decision__title {
+    text-align: center;
+    margin-bottom: 72px;
+    position: relative;
+
+    &::after,
+    &::before {
+        content: '';
+        position: absolute;
+        background-repeat: no-repeat;
+        width: 20px;
+        height: 20px;
+    }
+
+    &::before {
+        background-image: url(../images/decor/plus-blue.svg);
+        top: 35px;
+        left: 200px;
+    }
+
+    &::after {
+        background-image: url(../images/decor/plus.svg);
+        right: 40px;
+        top: 0;
+    }
+}
+.decision__items {
+    display: flex;
+    justify-content: center;
+    margin: 0 -10px 65px;
+    position: relative;
+
+    @media screen and (max-width: 1150px) {
+        flex-wrap: wrap;
+    }
+
+    @media screen and (max-width: 950px) {
+        margin: 0 -10px;
+    }
+    @media screen and (max-width: 800px) {
+        margin: 0;
+    }
+
+    &::after,
+    &::before {
+        content: '';
+        position: absolute;
+        width: 65px;
+        height: 65px;
+        background-image: url(../images/decor/triangle.svg);
+        background-repeat: no-repeat;
+    }
+
+    &::before {
+        top: -130px;
+        left: 60px;
+    }
+
+    &::after {
+        right: 20px;
+        bottom: 30px;
+        transform: rotate(30.48deg);
+    }
+    
+}
+.decision__item {
+    margin: 0 32px;
+    max-width: 400px;
+    padding: 80px 50px;
+    box-shadow: 10px 4px 30px rgba(172, 172, 172, 0.25);
+    border-radius: 20px;
+    background-color: #fff;
+    transition: 0.3s;
+    position: relative;
+    overflow: hidden;
+    z-index: 1;
+
+    @media screen and (max-width: 1150px) {
+        margin-bottom: 30px;
+    }
+
+    @media screen and (max-width: 950px) {
+        margin: 0 10px 30px;
+        padding: 32px 26px;
+    }
+    @media screen and (max-width: 800px) {
+        margin: 0 0 20px;
+    }
+
+    &::before {
+        content: '';
+        position: absolute;
+        width: 300px;
+        height: 660px;
+        background: linear-gradient(156.26deg, rgba(255, 255, 255, 0.06) 20.55%, rgba(51, 40, 40, 0) 94.81%);
+        top: 0;
+        right: 0;
+        transform: translateY(-645px) rotate(310deg);
+        transition-duration: 0.3s;
+        z-index: -1;
+    }
+
+    &:hover {
+        background: #39379F;    
+        color: #ffffff;
+        
+    }
+
+    &:hover::before {
+        transition-delay: 0.15s;
+        transform: translateY(-330px) rotate(310deg);
+    }
+    
+}
+.decision__item-title {
+    margin-bottom: 20px;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 29px;
+    text-align: center;
+    text-transform: uppercase;
+    
+    @media screen and (max-width: 400px) {
+        font-size: 18px;
+        line-height: 22px;
+        margin-bottom: 15px;
+    }
+}
+.decision__item-img {
+    padding-bottom: 23px;
+    display: inline-block;
+    margin-bottom: 25px;
+    border-bottom: 1px solid rgba(28, 45, 90, 0.12);
+
+    @media screen and (max-width: 400px) {
+        margin-bottom: 12px;
+        padding-bottom: 14px;
+    }
+}
+.decision__btn {
+    background: linear-gradient(95.03deg, #F09642 0%, #F0DF42 145.26%);
+    max-width: 280px;
+    display: block;
+    color: #ffffff;
+    margin: 0 auto 15px;
+    transition: 0.3s;
+
+    &:hover {
+        opacity: 0.8;
+    }
+}
+.decision__btn-decription {
+    text-align: center;
+    max-width: 330px;
+    margin: 0 auto;
+}
+
