add webp & avif images with picture tag
site weight without modern images format - 2.7mb. Weight with avif & webp - 685kB

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -21,7 +21,7 @@
     width: 1270px;
     content: "";
     position: absolute;
-    background-image: url(../images/header/bg.jpg);
+    background-image: url(../images/header/bg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: -70% 10%;
@@ -1223,7 +1223,7 @@
 // IMPROVE ========================
 
 .improve {
-    background-image: url(../images/improve/bg.jpg);
+    background-image: url(../images/improve/bg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: right center;
@@ -1492,7 +1492,7 @@
 .change {
     color: #ffffff;
     padding: 170px 0 190px;
-    background-image: url(../images/change/bg.jpg);
+    background-image: url(../images/change/bg.webp);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
